fixed minor issue ith text alignment

--- a/src/components/ActivityDetails/style.css
+++ b/src/components/ActivityDetails/style.css
@@ -11,7 +11,7 @@
 .ActivityDetails .SpeakerCardContainer{
     margin: 10px auto;
     display: grid;
-    
+    text-align: start;
     grid-template-columns: auto;
     justify-items: center;
     align-items: center;
